--- a/Module 6/Metropolis Hastings.Rmd
+++ b/Module 6/Metropolis Hastings.Rmd
@@ -643,3 +643,192 @@ curve(dt(x, df = 4), add = TRUE, col = 4)
 
 ```
 
+
+
+
+## Bayesian Analysis
+
+### O-ring Challenger Data
+
+
+The following is a well covered logistic regression example using the O-ring data set related to the 1986 space shuttle Challenger exploision. The output is modeled as the probability of failure (Y = 1) given the data.
+
+$$
+P(Y = 1 | X = x) = p = \frac{exp(\alpha + x \beta)}{1 + exp(\alpha + x \beta)}
+$$
+Or, equivalently with the logit transformation on $P$
+$$
+logit(p) = \frac{p}{1 - p} = \alpha + x \beta
+$$
+
+
+
+```{r}
+
+failure <- c(1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 
+             0, 0, 0, 1, 0, 0, 0, 0, 0)
+temperature <- c(53, 57, 58, 63, 66, 67, 67, 67, 68, 
+                 69, 70, 70, 70, 70, 72, 73, 75, 75,
+                 76, 76, 78, 79, 81)
+
+df = data.frame(failure, temperature)
+
+head(df)
+
+
+
+```
+
+
+The frequentist logistic regression
+
+```{r}
+fit = glm(formula = failure ~ temperature, data = df, 
+          family = binomial(link = "logit"))
+
+summary(fit)
+
+```
+
+
+Observed are 
+$$
+Y_i \sim Bernoulli(p(x_i)), \text{ where } p(x_i) = \frac{exp(\alpha + x_i \beta)}{1 + exp(\alpha + x_i \beta)}
+$$
+where $p(x_i)$ is the probability of O-ring failure at temperature $x_i$. The likelihood is
+$$
+L(\alpha, \beta | \mathbf{y}) \propto \prod^n_{i = 1} (\frac{exp(\alpha + x_i \beta)}{1 + exp(\alpha + x_i \beta)})^{y_i} \times (\frac{ 1 }{1 + exp(\alpha + x_i \beta)})^{1 - y_i}
+$$
+
+and as a prior Robert & Casella choose
+$$
+\pi_{\alpha}(\alpha | b) \times \pi_{\beta}(\beta) = \frac{1}{b} e^{\alpha} e^{- e^{\alpha/b}}
+$$
+which puts an exponential prior on $log(\alpha)$ and a flat prior on $\beta$ (uniform), and insures a proper posterior distribution. 
+
+
+```{r}
+# Preliminary output from ML estimation
+a.mle <- as.numeric(fit$coefficients[1])
+b.mle <- as.numeric(fit$coefficients[2])
+var.a.mle <- summary(fit)$cov.scaled[1, 1]
+var.b.mle <- summary(fit)$cov.scaled[2, 2]
+b.mme <- exp(a.mle + 0.577216)
+
+
+```
+
+
+
+```{r}
+## setting up functions
+
+# Posterior distribution
+dpost <- function(theta, y = failure, x = temperature){
+    ## density of Y is binomial/bernoulli
+    a <- theta[1]
+    b <- theta[2]
+    p <- 1 - 1 / (1 + exp(a + b * x)) ## logistic CDF
+    lik <- exp(sum(dbinom(y, size=1, prob=p, log=TRUE)))
+    dprior <- exp(a) * exp(-exp(a) / b.mme) * 1/ b.mme ## density of prior
+    return(lik * dprior)
+}
+
+
+# Proposal distribution (independent proposal, so "theta0" is not used)
+dprop <- function(theta){
+    ## ignore theta0
+    a <- theta[1]
+    b <- theta[2]
+    pr1 <- exp(a) * exp(-exp(a) / b.mme) / b.mme
+    pr2 <- dnorm(b, b.mle, sqrt(var.b.mle))
+    return(pr1 * pr2)
+}
+
+
+
+
+rprop <- function(theta0){
+    ## independent proposals for a and b
+    #a <- log(rexp(1, 1 / b.mme))
+    a <- log(rexp(1, 1 / b.mme)) ## log for computational purposes
+    b <- rnorm(1, b.mle, sqrt(var.b.mle))
+    return(c(a, b))
+}
+
+
+
+```
+
+
+
+
+```{r}
+## Metropolis-Hastings set up to run
+
+
+# Run Metropolis-Hastings
+N <- 10^4
+B <- 10^3
+#mh.out <- MH(c(a.mle, b.mle), dpost, dprop, rprop, N, B)
+
+
+## x0: initializing values for MH algorithm
+## f: the pdf of posterior; target distribution
+## dprop: the pdf of the proposal distribution
+## rprop: the random number gen for proposal
+## N: Number of samples needed
+## B: Number of burn in samples
+## function generates N+B samples then drops B
+x0 <- c(a.mle, b.mle)
+x <- matrix(NA, nrow = N + B, ncol = length(x0)) 
+fx <- rep(NA, N + B)
+x[1,] <- x0 ## add the initializing values
+fx[1] <- dpost(x0) ## initiate the M-H algorithm
+ct <- 0 ## counter for acceptance
+
+for(i in 2:(N + B)){
+    u <- rprop(x[i-1,])
+    fu <- dpost(u)
+    ## use log values for computational purposes
+    r <- log(fu) + log(dprop(x[i-1,])) - log(fx[i-1]) - log(dprop(u))
+    R <- min(exp(r), 1)
+    if(runif(1) <= R){
+        ct <- ct + 1 ## update counter
+        x[i,] <- u
+        fx[i] <- fu
+    } else {
+    x[i,] <- x[i-1,]
+    fx[i] <- fx[i-1]
+    }
+}
+
+
+mh.out <- x[-(1:B), ]
+alpha.mh <- mh.out[,1]
+beta.mh <- mh.out[,2]
+
+
+```
+
+
+
+
+
+
+
+```{r}
+
+
+par(mfrow = c(1,2))
+hist(alpha.mh, freq=FALSE, col="gray", border="white", xlab=expression(alpha))
+plot(alpha.mh, type="l", col="gray", xlab="Iteration", ylab=expression(alpha))
+lines(1:N, cumsum(alpha.mh) / (1:N))
+
+hist(beta.mh, freq=FALSE, col="gray", border="white", xlab=expression(beta))
+plot(beta.mh, type="l", col="gray", xlab="Iteration", ylab=expression(beta))
+lines(1:N, cumsum(beta.mh)/(1:N))
+
+
+```
+
