--- a/Module 7/Gibbs Samplers.Rmd
+++ b/Module 7/Gibbs Samplers.Rmd
@@ -205,7 +205,7 @@ And the final result is some function that is not recognizable as any commonly k
 
 However, if we are too look at the conditional posteriors, $\mu | \tau, \mathbf{y}$ 
 $$
-p(\mu | \tau, \mathbf{y}) \propto exp(1 \frac{1}{2} (n \tau + b) (\mu - \hat{\mu}_{\tau} )^2 )
+p(\mu | \tau, \mathbf{y}) \propto exp(- \frac{1}{2} (n \tau + b) (\mu - \hat{\mu}_{\tau} )^2 )
 $$
 and $\tau | \mu,\mathbf{y}$ 
 $$
@@ -214,6 +214,300 @@ $$
 we find that there are recognizable distributions. They are $N(\hat\mu, \frac{1}{n \tau + b})$ and $Gamma(\frac{n}{2} + c, d +  \frac{n (\bar{y} - \mu)^2 + (n-1)s^2 }{2})$
 
 Given that we can sample from the conditional distributions, we can utilize a Gibbs sampler to sample from the posterior distribution $p(\mu, \tau | \mathbf{y})$.
+
+
+
+
+
+
+```{r}
+
+y = mtcars$mpg
+
+plot(density(y), main = "Density of MPG", 
+     lty = 2, xlab = "MPG")
+
+
+
+# This function takes the prior mean and a percentile and returns the corresponding hyperparameter values for the normal prior
+find.normal <- function(prior.mean, percentile, p=0.95){
+  prior.sd <- (qnorm(p) / (percentile - prior.mean))^{-1}
+  return(list(mean=prior.mean, sd=prior.sd, precision=1/prior.sd^2)) 
+}
+
+
+# This function takes the prior mode and a percentile of sigma and returns the corresponding parameters of the Gamma distribution for tau 
+find.tau.gamma <- function(prior.sigma.mode, sigma.percentile, p=0.95, start.a=1, end.a=1000, increment=0.01){
+  a <- seq(from=start.a, to=end.a,  by=increment)
+  b <- prior.sigma.mode^2 * (a + 1)
+  i <- which.max(qgamma(1-p, a, b) > 1/sigma.percentile^2)
+  return(list(a=a[i], b=b[i])) 
+}
+
+
+```
+
+
+```{r}
+
+N = 3 * 10^3
+n = length(y)
+ybar = mean(y)
+s = sd(y)
+mu = numeric(N)
+tau = numeric(N)
+
+## initial values
+mu = ybar
+tau = 1/sd(y)
+
+
+## Normal hyper parameters
+a <- find.normal(prior.mean=21, percentile = 24, p=0.95)$mean
+b <- find.normal(prior.mean=21, percentile = 24, p=0.95)$precision
+
+## Gamma Hyper parameters
+gamma_HyperParams <- find.tau.gamma(prior.sigma.mode= 1.2, sigma.percentile = 2.462, p=0.95) # Returns shape and rate parameters for the Gamma distribution of tau
+gamma_HyperParams
+
+c = gamma_HyperParams$a ## arbitrary
+d = gamma_HyperParams$b ## arbitrary
+
+for(i in 2:N){
+  SHAPE = c + n/2
+  RATE = d + 0.5*( n*(ybar - mu[i-1])^2 + (n-1)*s^2  )
+  tau[i]  = rgamma(n = 1, shape = SHAPE, rate = RATE)
+  
+  MU = mu[i-1]
+  SD = 1/(n*tau[i] + b)
+  mu[i] = rnorm(n = 1, mean = MU, sd = SD)  
+}
+
+B = 10^2
+
+muPosterior = mu[-(1:B)]
+tauPosterior = tau[-(1:B)]
+
+plot(density(mu), main = "Density of mu", 
+     lty = 2, xlab = "mu")
+
+
+
+
+plot(density(tau), main = "Density of tau", 
+     lty = 2, xlab = "tau")
+
+
+
+```
+
+
+
+
+
+
+
+
+
+
+### Example: Inferring patterns in UK coal mining disasters
+Let's try to model a more interesting example, a time series of recorded coal mining disasters in the UK from 1851 to 1962.
+Occurrences of disasters in the time series is thought to be derived from a Poisson process with a large rate parameter in the early part of the time series, 
+and from one with a smaller rate in the later part. We are interested in locating the change point in the series, which perhaps is related to changes in mining 
+safety regulations.
+
+
+
+```{r}
+
+data_array = c(4, 5, 4, 0, 1, 4, 3, 4, 0, 6, 3, 3, 4, 0, 2, 6,
+                    3, 3, 5, 4, 5, 3, 1, 4, 4, 1, 5, 5, 3, 4, 2, 5,
+                    2, 2, 3, 4, 2, 1, 3, 2, 2, 1, 1, 1, 1, 3, 0, 0,
+                    1, 0, 1, 1, 0, 0, 3, 1, 0, 3, 2, 2, 0, 1, 1, 1,
+                    0, 1, 0, 1, 0, 0, 0, 2, 1, 0, 0, 0, 1, 1, 0, 2,
+                    3, 3, 1, 1, 2, 1, 1, 1, 1, 2, 4, 2, 0, 0, 1, 4,
+                    0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 1)
+
+disasters = ts(data_array, freq=1, start = 1851)
+
+plot(disasters, type = "o", lty = 2)
+
+plot(disasters, type = "h", lty = 6, lwd = 2)
+
+```
+
+
+
+We are going to use Poisson random variables for this type of count data. Denoting year $i$'s accident count by $y_i$,
+$$
+y_i \sim \text{Poisson}(\lambda)
+$$
+
+
+
+The modeling problem revolves around estimating the values of the $\lambda$ parameters. 
+Looking at the time series above, it appears that the rate declines later in the time series.
+A changepoint model identifies a point (year) during the observation period (call it $\tau$) after which the 
+parameter $\lambda$ drops to a lower value. So we are estimating two $\lambda$ parameters: 
+one for the early period and another for the late period.
+$$
+\lambda = 
+\begin{cases}
+\lambda_1  \text{ if } t < \tau \\
+\lambda_2  \text{ if } t \geq \tau \\
+\end{cases}
+$$
+We need to assign prior probabilities to both $\lambda$ parameters. 
+The gamma distribution not only provides a continuous density function for positive numbers, 
+but it is also conjugate with the Poisson sampling distribution.
+
+
+
+
+
+
+We will specify suitably vague hyperparameters $\alpha$ and $\beta$ for both priors.
+$$
+\begin{aligned}
+&\lambda_1 \sim \text{Gamma}( 1, 10 ) \\\
+&\lambda_2 \sim \text{Gamma}( 1, 10 )
+\end{aligned}
+$$
+Since we do not have any intuition about the location of the changepoint (prior to viewing the data), we will assign a discrete uniform prior over all years 1851-1962.
+$$
+\begin{aligned}
+\ & \tau \sim \text{DiscreteUniform(1851,1962) }\\\\
+\ & \Rightarrow P( \tau = k ) = \frac{1}{111}
+\end{aligned}
+$$
+
+
+
+
+
+Implementing Gibbs sampling
+We are interested in estimating the joint posterior of $\lambda_1, \lambda_2$ and $\tau$ given the array of annnual disaster counts $\mathbf{y}$. This gives:
+$$
+P( \lambda_1, \lambda_2, \tau | \mathbf{y} ) \propto P(\mathbf{y} | \lambda_1, \lambda_2, \tau ) P(\lambda_1, \lambda_2, \tau) 
+$$
+
+To employ Gibbs sampling, we need to factor the joint posterior into the product of conditional expressions:
+
+$$
+P( \lambda_1, \lambda_2, \tau | \mathbf{y} ) \propto P(y_{t < \tau} | \lambda_1, \tau) P(y_{t\ge \tau} | \lambda_2, \tau) P(\lambda_1) P(\lambda_2) P(\tau)
+$$
+
+which we have specified as:
+
+$$
+\begin{aligned}
+P( \lambda_1, \lambda_2, \tau | \mathbf{y} ) & \propto \left[\prod_{t=1851}^{\tau} \text{Poi}(y_t|\lambda_1) \prod_{t=\tau+1}^{1962} \text{Poi}(y_t|\lambda_2) \right] \text{Gamma}(\lambda_1|\alpha,\beta) \text{Gamma}(\lambda_2|\alpha, \beta) \frac{1}{111} \\
+\ & \propto \left[\prod_{t=1851}^{\tau} e^{-\lambda_1}\lambda_1^{y_t} \prod_{t=\tau+1}^{1962} e^{-\lambda_2} \lambda_2^{y_t} \right] \lambda_1^{\alpha-1} e^{-\beta\lambda_1} \lambda_2^{\alpha-1} e^{-\beta\lambda_2} \\
+\ & \propto \lambda_1^{\sum_{t=1851}^{\tau} y_t +\alpha-1} e^{-(\beta+\tau)\lambda_1} \lambda_2^{\sum_{t=\tau+1}^{1962} y_i + \alpha-1} e^{-\beta\lambda_2}
+\end{aligned}
+$$
+
+So, the full conditionals are known, and critically for Gibbs, can easily be sampled from.
+$$
+\lambda_1 \sim \text{Gamma}(\sum_{t=1851}^{\tau} y_t +\alpha, \tau+\beta)
+$$
+
+
+
+$$
+\lambda_2 \sim \text{Gamma}(\sum_{t=\tau+1}^{1962} y_i + \alpha, 1962-\tau+\beta)
+$$
+
+$$
+\tau \sim \text{Categorical}\left( \frac{\lambda_1^{\sum_{t=1851}^{\tau} y_t +\alpha-1} e^{-(\beta+\tau)\lambda_1} \lambda_2^{\sum_{t=\tau+1}^{1962} y_i + \alpha-1} e^{-\beta\lambda_2}}{\sum_{k=1851}^{1962} \lambda_1^{\sum_{t=1851}^{\tau} y_t +\alpha-1} e^{-(\beta+\tau)\lambda_1} \lambda_2^{\sum_{t=\tau+1}^{1962} y_i + \alpha-1} e^{-\beta\lambda_2}} \right)
+$$
+
+Implementing this in Python requires random number generators for both the gamma and discrete uniform distributions. We can leverage NumPy for this:
+
+
+Function to draw random gamma variate
+
+
+```{r}
+alpha = 1.0
+beta = 10
+
+# Specify number of iterations
+N = 10^4
+B = 1000
+
+# Initialize trace of samples
+lambda1 = numeric(N+1)
+lambda2 = numeric(N+1)
+tau = numeric(N+1)
+
+
+## initialize values
+lambda1[1] = 6
+lambda2[1] = 2
+tau[1] = 50
+
+
+n_count_data = length(disasters)
+
+DGamma = function(lambda, a, b){
+  lambda**(a-1) * exp(-b*lambda)
+}
+
+
+```
+
+
+
+
+
+
+
+
+```{r}
+disasters_array = disasters
+# Sample from conditionals
+for(i in 1:N){
+  # Sample early mean
+  sumDisasters = sum(disasters_array[1:tau[i]])  ## disasters_array[tau[i]:].sum()
+  lambda1[i+1] = rgamma(n = 1, shape = sumDisasters + alpha, scale = 1/(tau[i] + beta))
+
+  # Sample late mean
+  lambda2[i+1] = rgamma(n = 1, shape = sumDisasters + alpha, scale = 1/ (n_count_data - tau[i] + beta))
+
+  # Sample changepoint: first calculate probabilities (conditional)
+  p = numeric(n_count_data)
+  for(t in 1:n_count_data){
+   G1 = DGamma(lambda1[i+1], sum(disasters_array[1:t]) + alpha, t + beta)
+   G2 = DGamma(lambda2[i+1], sum(disasters_array[(t+1):111]) + alpha, n_count_data - t + beta)
+   p[t] = s1*s2
+  }
+  # # ... then draw sample
+ tau[i+1] = sample(x = 1:111, size = 1, prob = p/sum(p))
+  #runif(n = 1, min = 1, max = 111)  #rcategorical(p/p.sum())
+}
+
+```
+
+
+
+
+
+```{r}
+
+tauPost = tau[-(1:B)]
+lambdaPost1 = lambda1[-(1:B)]
+lambdaPost2 = lambda2[-(1:B)]
+
+plot(density(tauPost))
+
+plot(density(lambdaPost1))
+
+plot(density(lambdaPost2))
+
+
+```
+
 
 
 
