--- a/Module 7/Gibbs Samplers.Rmd
+++ b/Module 7/Gibbs Samplers.Rmd
@@ -162,13 +162,18 @@ hist(Y, main = "Marginal Dist: X", probability = TRUE)
 
 
 
+
+
+
+
+
 ### Poisson-Gamma Model
 
-Consider a random sample $y_i | \theta \sim Poisson(\theta t)$ where $\theta \sim Gamma(\alpha, \beta)$ for $i \in {1, ..., k}$. Assume $t$ and $\alpha$ are known constants, but that $\beta$ has an Inverse-Gamma, $IG(c, d)$, hyperprior with known hyperparameters $c$ and $d$. This represents a three stage model where the likelihood, prior and hyperprior are defined as
+Consider a random sample $\mathbf{y} = (y_1, ..., y_n)^T$ where  $y_i | \theta \sim Poisson(\theta)$ where $\theta \sim Gamma(\alpha, \beta)$ for $i \in {1, ..., k}$. Assume $t$ and $\alpha$ are known constants, but that $\beta$ has a $Gamma(c, d)$ hyperprior with known hyperparameters $c$ and $d$. This represents a three stage model where the likelihood, prior and hyperprior are defined as
 
 $$
 \begin{aligned}
-f(y_i | \theta) & = \frac{(\theta t)^{y_i}}{y_i !} e^{- \theta t}, y_i \geq 0, \theta_i > 0
+f(y_i | \theta) & = \frac{\theta^{y_i}}{y_i !} e^{- \theta }, y_i \geq 0, \theta_i > 0
 \end{aligned}
 $$
 
@@ -184,18 +189,19 @@ $$
 
 $$
 \begin{aligned}
-h( \beta) & = \frac{ 1 }{\Gamma(c) \beta^{c-1}  } \beta^{- (c-1)} e^{-1/ (d \beta) }, c > 0, d > 0
+h( \beta) & = \frac{ d^{c} }{\Gamma(c)   } \beta^{c-1} e^{-d \beta }, c > 0, d > 0
 \end{aligned}
 $$
 
 
-Suppose our interest is in generating samples from the marginal posterior distributions of $\theta_i$, $p(\theta_i | \mathbf{y})$. Note that while the gamma prior is conjugate with the Poisson likelihood and the inverse gamma hyperprior is conjugate with the gamma prior, no closed for for $p(\theta_i | \mathbf{y})$ exists. However, the full conditional distributions of $\beta$ and the $\theta_i$ needed to implement the Gibbs sampler can be extracted from the full conditional $p(\theta | \mathbf{y})$
+Suppose our interest is in generating samples from the marginal posterior distributions of $\theta$, $p(\theta | \mathbf{y})$. Note that while the gamma prior is conjugate with the Poisson likelihood and the gamma hyperprior is conjugate with the gamma prior, no closed for for $p(\theta | \mathbf{y})$ exists. However, the full conditional distributions of $\beta$ and the $\theta$ needed to implement the Gibbs sampler can be extracted from the full conditional $p(\theta | \mathbf{y})$
 
 $$
 \begin{aligned}
-p(\theta | \mathbf{y}, \beta) & \propto f(y_i | \theta ) g(\theta | beta) \\
-\ & \propto \theta^{y_i + \alpha - 1} e^{- \theta (t + 1) \beta)} \\
-\ & \propto Gamma(\theta | y_i + \alpha, \beta ( t + 1 ))
+p(\theta | \mathbf{y}, \beta) & \propto \prod_{i=1}^n f(y_i | \theta ) g(\theta | \beta) \\
+\ & \propto \theta^{n \bar{y}} e^{n \theta} \times \theta^{\alpha - 1} e^{- \theta \beta} \\
+\ & \propto \theta^{n\bar{y} + \alpha - 1}  e^{- \theta (n +  \beta)} \\
+\ & \propto Gamma(\theta | n \bar{y} + \alpha, n + \beta )
 \end{aligned}
 $$
 
@@ -203,12 +209,17 @@ while for $\beta$ we have
 
 $$
 \begin{aligned}
-p(\beta | \theta, \mathbf{y}) & \propto \prod_{i = 1}^{n} g(\theta | \beta) h(\beta) \\
-\ & \propto \prod_{i = 1}^{n} \beta^{\alpha} e^{- \theta \beta} \times \beta^{- (c - 1)} e^{-1/(\beta d)} \\
-\ & \propto \beta^{n \times \alpha + c + 1} e^{\beta \times (\sum_{i = 1}^n \theta_i + 1/d )} \\ 
-\ & \propto IG(\beta | n \times \alpha + c, (\sum_{i = 1}^n \theta_i + 1/d)^{-1})
+p(\beta | \theta, \mathbf{y}) & \propto g(\theta | \beta) \times h(\beta) \\
+\ & = \frac{\beta^{\alpha}}{\Gamma(\alpha)} \theta^{\alpha - 1} e^{- \beta \theta} \times  \frac{d^{c}}{\Gamma(c)} \beta^{c - 1} e^{- d \beta } \\
+\ & \propto \beta^{\alpha + c -1 } e^{- \beta ( \theta + d) } \\
+\ & \propto Gamma(\alpha + c, \theta + d)
 \end{aligned}
 $$
+
+
+
+
+
 
 
 \newpage
@@ -427,8 +438,8 @@ but it is also conjugate with the Poisson sampling distribution.
 We will specify suitably vague hyperparameters $\alpha$ and $\beta$ for both priors.
 $$
 \begin{aligned}
-&\lambda_1 \sim \text{Gamma}( 1, 10 ) \\\
-&\lambda_2 \sim \text{Gamma}( 1, 10 )
+&\lambda_1 \sim \text{Gamma}( 1, \beta_1 ) \\\
+&\lambda_2 \sim \text{Gamma}( 1, \beta_2 )
 \end{aligned}
 $$
 Since we do not have any intuition about the location of the changepoint (prior to viewing the data), we will assign a discrete uniform prior over all years 1851-1962.
